# Multimodal-AI-Guardrails-Security-Platform

./: .env.example  .gitignore  .gitlab-ci.example.yml  .pre-commit-config.yaml  BUILD_PLAN.md  CLAUDE.md  Makefile  QUICKSTART.md  README.md  alembic.ini  cli.py  package.json  pyproject.toml
.github/workflows/: adversarial-shield-scan.yml
alembic/: README  env.py
alembic/versions/: 20251116_0000_initial_schema.py
backend/: requirements.txt
backend/alerting/: __init__.py  alert_manager.py  incident_response.py  notifications.py  siem_connectors.py  tasks.py
backend/api/: main.py
backend/api/routes/: alerting.py  auth.py  cicd.py  guardrails.py  redteam.py  scanner.py  threat_intel.py  usage.py
backend/core/: auth.py  cache.py  celery_app.py  config.py  database.py  middleware.py  models.py  rate_limit.py
backend/guardrails/: __init__.py  engine.py  tasks.py
backend/guardrails/agents/: contextual_validator.py  enforcement_agent.py  sanitization_agent.py  validation_agent.py
backend/guardrails/detectors/: __init__.py  output_sanitizer.py  pii_detector.py  prompt_injection_detector.py  toxicity_detector.py
backend/guardrails/filters/: response_filter.py
backend/guardrails/policies/: policy_engine.py
backend/guardrails/utils/: performance_cache.py
backend/integrations/llm_providers/: __init__.py  anthropic_client.py  base.py  ollama_client.py  openai_client.py
backend/redteam/: __init__.py  engine.py  jailbreak.py  prompt_injection.py  tasks.py
backend/redteam/multimodal/: __init__.py  audio_attacks.py  cross_modal_attacks.py  image_attacks.py
backend/redteam/templates/: injection_patterns.json  jailbreak_patterns.json
backend/scanner/: __init__.py  compliance_checker.py  dynamic_scanner.py  engine.py  tasks.py  vulnerability_scanner.py
backend/scanner/static_analysis/: __init__.py  ast_analyzer.py  code_patterns.py
backend/tests/: conftest.py
backend/tests/test_api/: test_guardrails.py  test_jailbreak.py  test_redteam.py
backend/tests/test_guardrails/: test_contextual_validation.py  test_injection_detector.py  test_integration.py  test_response_filter.py  test_sanitization.py
backend/tests/test_redteam/: test_jailbreak.py  test_multimodal.py  test_prompt_injection.py
backend/tests/test_scanner/: test_dynamic_scanner.py  test_scanner_api.py  test_vulnerability_scanner.py
backend/threat_intel/: __init__.py  attack_surface_mapper.py  mitre_atlas.py  owasp_threat_modeler.py  pattern_learner.py  stride_modeler.py  tasks.py
backend/utils/: __init__.py  rate_limiter.py  token_counter.py
data/attack_patterns/: patterns.json
data/vulnerabilities/: llm_vulnerabilities.json
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  api_reference.md  architecture.md  quick_start.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/guardrails/: page.tsx
frontend/app/dashboard/redteam/: page.tsx
frontend/app/dashboard/scanner/: page.tsx
frontend/app/guardrails/: page.tsx
frontend/app/redteam/: page.tsx
frontend/app/scanner/: page.tsx
frontend/components/: Navigation.tsx
frontend/components/dashboard/: Header.tsx  Navigation.tsx
frontend/components/widgets/: AIAssistant.tsx  LiveAlerts.tsx  MultimodalStreams.tsx  PredictiveAnalytics.tsx  SecurityPosture.tsx  ThreatMap.tsx
frontend/lib/: api-client.ts  utils.ts
frontend/styles/: globals.css
frontend/types/: index.ts
scripts/: seed_attack_patterns.py  setup.sh
